--- a/contrib/debian/control
+++ b/contrib/debian/control
@@ -24,9 +24,9 @@ Build-Depends: debhelper,
  libprotobuf-dev, protobuf-compiler,
  python
 Standards-Version: 3.9.2
-Homepage: https://www.wavi.org/
-Vcs-Git: git://github.com/wavibanana/wavi.git
-Vcs-Browser: https://github.com/wavibanana/wavi
+Homepage: https://wavidev-the-man.github.io/wavi/
+Vcs-Git: git://github.com/wavidev-the-man/wavi.git
+Vcs-Browser: https://github.com/wavidev-the-man/wavi
 
 Package: wavid
 Architecture: any
